<resources>
    <string name="app_name">Manos Solidarias</string>
    <string name="app_mail">info@manossolidarias.com.ar</string>
    <string name="app_mail_subject">Necesito ayuda.</string>

    <string name="button_facebook">Entrar con Facebook</string>
    <string name="button_google">Entrar con Google</string>
    <string name="button_create_account">Crear cuenta</string>
    <string name="input_mail">Correo electrónico</string>
    <string name="input_pass">Contraseña</string>
    <string name="input_re_pass">Repetir contraseña</string>
    <string name="create_account">Registrar Usuario</string>
    <string name="restore_pass_explain">Ingresa tu correo electrónico, nosotros te enviaremos un mensaje con las instrucciones para recuperar tú contraseña.</string>
    <string name="restore_pass">Recuperar Contraseña</string>
    <string name="button_login">Ingresar con correo</string>
    <string name="lost_password">¿Olvidaste tu contraseña?</string>
    <string name="new_account">Crea una cuenta con tu correo.</string>
    <string name="account_help">¿Necesitas ayuda? ¿Tienes alguna pregunta?</string>

    <string name="not_found_tittle">Opps, algo salio mal!</string>
    <string name="not_found_button">{faw-arrow-left}  Intenta con otra donación.</string>

    <string name="loading">Cargando…</string>
    <string name="Logout">Salir</string>
    <string name="add">Agregar ONG</string>
    <string name="showHelp">¿Mostrar Ayuda?</string>
    <string name="configs">Configuración</string>
    <string name="home">Inicio</string>
    <string name="list_ong">Lista Ong´s</string>
    <string name="list_donations">Donaciones</string>
    <string name="config">Configuración</string>

    <string name="about">Acerca de</string>
    <string name="aboutDesc">Nuestra misión es acercar a las personas que desean conocer o interactuar con con las instituciones u organismos de bien público. Esta aplicación es totalmente sin fines de lucro y esta pensada para ser una herramienta más al servicio las organizaciones que se dedican al bien social</string>
    <string name="contact">Contactanos</string>
    <string name="emailAddr">mbove77dev@gmail.com</string>
    <string name="appUrl">https://manos-solidarias.firebaseapp.com</string>
    <string name="fbPageId">manosSolidariasApp</string>
    <string name="playStoreId">com.bove.martin.manossolidarias</string>
    <string name="gitHubId">mbove77/ManosSolidarias</string>

    <string name="error_req">Este campo es obligatorio.</string>
    <string name="error_email">Ingrese un email valido.</string>
    <string name="error_pass">Ingrese un password valido.</string>
    <string name="error_pass_short">El password debe tener al menos 6 caracteres.</string>
    <string name="error_pass_confirm">El password y la confirmación no coinciden.</string>
    <string name="error_sigin">Error al iniciar sección, revise los datos.</string>

    <string name="email_clients">Clientes de correo</string>
    <string name="error_create_account">Error al crear cuenta de usuario.</string>
    <string name="email_verfy">Enviamos un correo para verificar tu cuenta de correo.</string>
    <string name="open_mail">Abrir mail</string>
    <string name="error_email_client">No tienes ningún cliente de correo para completar esta acción.</string>
    <string name="error_email_verfy">Debes verificar tu correo antes de iniciar sección.</string>
    <string name="resend_verfy">Reenviar</string>

    <string name="error_email_forgot">Ingrese su correo para restablecer su contraseña.</string>
    <string name="email_forgot_send">Te enviamos un email con instrucciones para seguir, revisa tu correo!</string>

    <string name="home_tittle">¿Que deseas hacer?</string>
    <string name="donation_list_tittle">¿Que quieres donar?</string>
    <string name="donation_help">Maten pulsado sobre cada item para saber más.</string>
    <string name="donation_help_action">OK</string>
    <string name="no_result">No encontramos instituciones para la donación que deseas realizar.</string>
    <string name="back_to_exit">Si deseas salir oprime atrás otra vez.</string>

    <string name="info">Info</string>
    <string name="map">Mapa</string>
    <string name="sms">Mensaje</string>
    <string name="nav">Navegar</string>

    <string name="error_no_intent">No encontramos ninguna aplicación para completar la acción.</string>
    <string name="msj_hint">Mensaje...</string>
    <string name="welcome_chat">Bienvenido, en que podemos ayudarte?</string>

    <string name="donation_desc">Descripción de la donación (opcional)</string>
    <string name="donation_name">Nombre de la donación</string>
    <string name="donation_tittle">Sugiere donación</string>
    <string name="enviar_mensaje">Enviar Mensaje</string>
    <string name="donation_desc_text">Si nos indicas una donación la tendremos en cuenta para agregarla lo antes posible.</string>

    <string name="new_ong_tittle">Sugiere una ONG</string>
    <string name="ong_name">Nombre de la ONG</string>
    <string name="ong_desc">¿ Como la encontramos ? facebook, instagram, web, etc...</string>
    <string name="ong_desc_text">Si conoces una ONG que no esta en la lista, puedes darnos detalles para agregarla a nuestra base de datos.</string>
    <string name="ong_suggest_misc">Cualquier otra información que creas relevante (opcional)</string>
    <string name="ong_already_suggest">Alguien ya nos sugirió esa ONG. Muchas gracias igualmente!</string>

    <string name="donation_already_suggest">Alguien ya nos sugirió esa donación. Muchas gracias igualmente!</string>
    <string name="donation_suggest_spam">No puedes enviar tantas sugerencias seguidas!</string>
    <string name="donation_suggest_success">Muchas gracias por tu sugerencia, la tendremos en cuenta para agregarla pronto!</string>
    <string name="donation_suggest_error">Ups, algo salió mal, intenta nuevamente mas tarde.</string>
    <string name="suggest_ong">Sugiérenos una institución</string>

    <string name="lista_ong">Lista Ong´s</string>
    <string name="donaciones">Donaciones</string>
    <string name="nueva_ong">Nueva ONG</string>
    <string name="news_tittle">Novedades</string>
    <string name="apps_tittle">Más Apps Geniales!</string>
    <string name="online_msj">De nuevo en Línea!</string>
    <string name="offline_msj">Sin conexión a internet.</string>

    <string name="fcm_token">FCM Token: %s</string>
    <string name="fcm_message">Mensaje</string>
    <string name="default_notification_channel_id" translatable="false">manos_default_channel</string>

    <string name="logo_desc">Logo</string>
    <string name="arrow_desc">Volver</string>
    <string name="send_desc">Enviar mensaje</string>
    <string name="donations_desc">Icono de cada donación</string>
    <string name="tel_desc">Icono de teléfono</string>
    <string name="mail_icon_desc">Icono de correo</string>
    <string name="icono_web_desc">Icono Web</string>
    <string name="fb_icon_desc">Icono de Facebook</string>
    <string name="instagram_icon_desc">Icono de Instagram</string>
    <string name="twitter_icon_desc">Icono de Twitter</string>
    <string name="youtube_icon_desc">Icono de Youtube</string>
    <string name="whatsapp_icon_desc">Icono de WhatsApp</string>
    <string name="direccion">Dirección</string>
    <string name="more_info">Más Info:</string>
    <string name="horario">Horario:</string>
    <string name="mision">Nuestra Misión</string>
    <string name="header_ong_img_desc">Imagen de cabecera de la ONG.</string>
    <string name="logo_ong_desc">Logo de la ONG.</string>
    <string name="search">Buscar</string>
</resources>
